...
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="login_screen">Login Fragment</string>
    <string name="start_workout">Start Workout</string>
    <string name="trends">Trends</string>
    <string name="workout_regimens">My Workout Regimens</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_create_exercise">Create Your Exercise</string>
    <string name="build_workout">Build A Workout</string>

    <!--Splash-->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="background_image">Background Image</string>
...
    <string name="other">Other</string>
    <string name="birthday">Birthday</string>
    <string name="birthdayField">Birthday:</string>
    <string name="unitOfMeasure">Unit of Measure</string>
    <string name="age">Age</string>
    <string name="switchMeasureToMetric">Switch to Metric</string>
    <string name="switchMeasureToImperial">Switch to Imperial</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up!</string>
    <string name="no_account">Dont have an account?</string>
...
